[workspace]
members = [
  "config",
  "error",
  "macros",
  "storage",
  "wire",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
# Local crates
cutenet-config = {path = "config"}
cutenet-error = {path = "error"}
cutenet-macros = {path = "macros"}
cutenet-storage = {path = "storage"}
cutenet-wire = {path = "wire"}
# External crates
bitflags = "2.6"
byteorder = {version = "1.5", default-features = false}
crossbeam-queue = {version = "0.3", default-features = false, features = ["alloc"]}
either = {version = "1.13", default-features = false}
heapless = {version = "0.8", features = ["mpmc_large"]}
stable_deref_trait = {version = "1.2", default-features = false}

[workspace.dependencies.tracing]
default-features = false
features = ["log", "attributes"]
version = "0.1"

[package]
name = "cutenet"

edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["std", "alloc", "log"]

alloc = [
  "cutenet-storage/alloc",
  "dep:crossbeam-queue",
]
log = [
  "cutenet-wire/log",
  "dep:tracing",
]
std = [
  "alloc",
  "cutenet-storage/std",
]

[dependencies]
# Local crates
cutenet-config.workspace = true
cutenet-error.workspace = true
cutenet-macros.workspace = true
cutenet-storage.workspace = true
cutenet-wire.workspace = true

# External crates
crossbeam-queue = {workspace = true, optional = true}
either.workspace = true
heapless.workspace = true
tracing = {workspace = true, optional = true}
