[package]
name = "cutenet-storage"

edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["std"]

alloc = ["stable_deref_trait/alloc"]
std = ["alloc", "stable_deref_trait/std"]

[dependencies]
# Local crates
cutenet-error.workspace = true
# External crates
heapless.workspace = true
stable_deref_trait.workspace = true
