[package]
name = "cutenet-wire"

edition.workspace = true
license.workspace = true
version.workspace = true

[features]
log = ["dep:tracing"]

[dependencies]
# Local crates
cutenet-config.workspace = true
cutenet-error.workspace = true
cutenet-macros.workspace = true
cutenet-storage.workspace = true
# External crates
bitflags.workspace = true
byteorder.workspace = true
either.workspace = true
heapless.workspace = true
tracing = {workspace = true, optional = true}
